--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-dom": "17.0.2",
         "react-icons": "^4.2.1",
         "react-moment": "^1.1.1",
+        "react-modal": "^3.16.1",
         "react-snake-game": "^1.0.9",
         "snake-game-react": "^1.0.6",
         "swr": "^1.1.1",
